--- a/Demo/Views/Students/Create.cshtml
+++ b/Demo/Views/Students/Create.cshtml
@@ -1,9 +1,14 @@
 ﻿@model StudentDto
 
+
+
 <form asp-controller="Students" asp-action="Create" method="post" enctype="multipart/form-data">
+
+    
+
     @Html.AntiForgeryToken()
 
-    <div class="row">
+    <div class="row mt-5">
         <div class="col-md-8 mx-auto rounded border p-3">
             <h2 class="text-center mb-5">New Student</h2>
 
@@ -51,6 +56,14 @@
                 </div>
             </div>
 
+            <div class="row mb-3">
+                <label class="col-sm-4 col-form-label">Age</label>
+                <div class="col-sm-8">
+                    <input class="form-control" asp-for="Age" />
+                    <span asp-validation-for="Age" class="text-danger"></span>
+                </div>
+            </div>
+
             <div class="row">
                 <div class="offset-sm-4 col-sm-4 d-grid">
                     <button type="submit" class="btn btn-primary">Submit</button>
@@ -62,3 +75,9 @@
         </div>
     </div>
 </form>
+
+
+
+@section Scripts {
+    <partial name="_ValidationScriptsPartial" />
+}
