--- a/Demo/Views/Students/Index.cshtml
+++ b/Demo/Views/Students/Index.cshtml
@@ -180,6 +180,7 @@
 			</div>
 			<ul class="menu">
 				<li>
+					<a href="/Courses/Dashboard" class="menu-link" style="text-decoration:none;color:inherit;">
 					<div class="menu-item">
 						<span class="menu-icon">📊</span>
 						<span>Dashboard</span>
