--- a/Demo/Views/Students/StudentCourses.cshtml
+++ b/Demo/Views/Students/StudentCourses.cshtml
@@ -326,15 +326,18 @@
 			background-color: #4361ee;
 			color: white;
 			padding: 12px 25px;
+			font-style:bold;
 			border-radius: 6px;
 			font-weight: 600;
 			cursor: pointer;
 			transition: background-color 0.3s;
 			border: none;
+			text-decoration: none;
 		}
 
 			.enroll-btn:hover {
 				background-color: #3a56d4;
+				color:darkblue;
 			}
 
 
