--- a/Demo/Views/Courses/Dashboard.cshtml
+++ b/Demo/Views/Courses/Dashboard.cshtml
@@ -249,7 +249,7 @@
 
 
 					<div class="input-group mt-3" style="width:950px;margin-right:100px;">
-						<input type="text" name="searchCourse" class="form-control" placeholder="Search by name..." value="@search" />
+						<input type="text" name="searchCourse" class="form-control" placeholder="Search by Title..." value="@search" />
 						<button type="submit" class="btn btn-primary">Search</button>
 					</div>
 				</div>
