--- a/Demo/Views/Students/Edit.cshtml
+++ b/Demo/Views/Students/Edit.cshtml
@@ -1,5 +1,6 @@
 ﻿@model Demo.Models.Student
 
+
 @if (!string.IsNullOrEmpty(Model.ImageFileName))
 {
     <div class="mb-3" style="display:none;">
@@ -59,9 +60,49 @@
                 </div>
             </div>
 
+
+            @* <div class="row mb-3"> *@
+            @*     <label class="col-sm-4 col-form-label">Country</label> *@
+            @*     <div class="col-sm-8"> *@
+            @*         <select class="form-select" asp-for="Country" asp-items="Model.Countries" id="countryDropdown"> *@
+            @*             <option value="">Select Country</option> *@
+            @*         </select> *@
+            @*         <span asp-validation-for="Country" class="text-danger"></span> *@
+            @*     </div> *@
+            @* </div> *@
+
+            @* <div class="row mb-3"> *@
+            @*     <label class="col-sm-4 col-form-label">State</label> *@
+            @*     <div class="col-sm-8"> *@
+            @*         <select class="form-select" asp-for="State" id="stateDropdown"> *@
+            @*             <option value="">Select State</option> *@
+            @*         </select> *@
+            @*         <span asp-validation-for="State" class="text-danger"></span> *@
+            @*     </div> *@
+            @* </div> *@
+
     <button type="submit" class="btn btn-primary">Save Changes</button>
     <a href="@Url.Action("Index", "Students")" class="btn btn-secondary">Cancel</a>
 
     </div>
     </div>
 </form>
+
+@* @section Scripts { *@
+
+@*     <partial name="_ValidationScriptsPartial" /> *@
+@*     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> *@
+@*     <script> *@
+@*         $('#countryDropdown').change(function () { *@
+@*             var country = $(this).val(); *@
+@*             $('#stateDropdown').empty().append('<option value="">Select State</option>'); *@
+@*             if (country) { *@
+@*                 $.getJSON('@Url.Action("GetStates", "Students")', { country: country }, function (states) { *@
+@*                     $.each(states, function (i, state) { *@
+@*                         $('#stateDropdown').append($('<option>', { value: state, text: state })); *@
+@*                     }); *@
+@*                 }); *@
+@*             } *@
+@*         }); *@
+@*     </script> *@
+@* } *@
